fixed data count bugs